# video-storage

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  OPTIMIZATION_README.md  README.md  config.example.toml  detailed_analysis.sh  detailed_audio_analysis.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  verify-deps.yml
crates/claim/: Cargo.toml
crates/claim/src/: bucket.rs  create_request.rs  error.rs  header.rs  lib.rs  manager.rs  middleware.rs  payload_v1.rs  payload_v2.rs
crates/claim/src/payload/: mod.rs  payload_v1.rs  payload_v2.rs
crates/core/: Cargo.toml
crates/core/src/: app_state.rs  config.rs  lib.rs  main.rs  opendal.rs  stream_map.rs
crates/core/src/api/: middleware.rs  mod.rs  routes.rs  token_bucket.rs
crates/core/src/claim/: header.rs  manager.rs  payload_v1.rs
crates/core/src/job/: convert.rs  manager.rs  mod.rs  raw.rs  upload.rs
crates/core/tests/: auth_integration_test.rs  convert_integration_test.rs
crates/ez-ffmpeg/: .gitignore  Cargo.toml  README.md
crates/ez-ffmpeg/examples/async/: Cargo.toml  README.md
crates/ez-ffmpeg/examples/async/src/: main.rs
crates/ez-ffmpeg/examples/audio_sample_rate_modification/: README.md  main.rs
crates/ez-ffmpeg/examples/audio_video_extraction/: README.md  main.rs
crates/ez-ffmpeg/examples/capture_camera_mic/: README.md  main.rs
crates/ez-ffmpeg/examples/custom_input_output/: README.md  main.rs
crates/ez-ffmpeg/examples/custom_tile_filter/: README.md  main.rs  tile_filter.rs
crates/ez-ffmpeg/examples/custom_volume_filter/: README.md  main.rs  volume_filter.rs
crates/ez-ffmpeg/examples/fps_modification/: README.md  main.rs
crates/ez-ffmpeg/examples/generate_black_video/: README.md  main.rs
crates/ez-ffmpeg/examples/hardware_acceleration/: README.md  main.rs
crates/ez-ffmpeg/examples/hls_conversion/: README.md  main.rs
crates/ez-ffmpeg/examples/metadata/: README.md  main.rs
crates/ez-ffmpeg/examples/processing_progress/: README.md  main.rs  progress_filter.rs
crates/ez-ffmpeg/examples/query_builtin_filters/: README.md  main.rs
crates/ez-ffmpeg/examples/query_codecs/: README.md  main.rs
crates/ez-ffmpeg/examples/query_devices/: README.md  main.rs
crates/ez-ffmpeg/examples/query_media_info/: README.md  main.rs
crates/ez-ffmpeg/examples/resolution_modification/: README.md  main.rs
crates/ez-ffmpeg/examples/rtmp_streaming/: Cargo.toml  README.md
crates/ez-ffmpeg/examples/rtmp_streaming/src/: main.rs
crates/ez-ffmpeg/examples/split_video_to_wav/: README.md  main.rs
crates/ez-ffmpeg/examples/still_video_from_image/: README.md  main.rs
crates/ez-ffmpeg/examples/thumbnail_extraction/: README.md  main.rs
crates/ez-ffmpeg/examples/transcoding/: README.md  main.rs
crates/ez-ffmpeg/examples/video_clipping/: README.md  main.rs
crates/ez-ffmpeg/examples/video_effects/: Cargo.toml  README.md
crates/ez-ffmpeg/examples/video_effects/resource/: fragment.glsl
crates/ez-ffmpeg/examples/video_effects/src/: main.rs
crates/ez-ffmpeg/examples/video_merging/: README.md  main.rs
crates/ez-ffmpeg/examples/watermarking/: README.md  main.rs
crates/ez-ffmpeg/src/: error.rs  lib.rs
crates/ez-ffmpeg/src/core/: codec.rs  container_info.rs  hwaccel.rs  mod.rs  stream_info.rs
crates/ez-ffmpeg/src/core/context/: decoder_stream.rs  demuxer.rs  encoder_stream.rs  ffmpeg_context.rs  ffmpeg_context_builder.rs  filter_complex.rs  filter_graph.rs  input.rs  input_filter.rs  mod.rs  muxer.rs  null_output.rs  obj_pool.rs  output.rs  output_filter.rs
crates/ez-ffmpeg/src/core/device/: avdevice.rs  macos_avfoundation.rs  mod.rs
crates/ez-ffmpeg/src/core/filter/: frame_filter.rs  frame_filter_context.rs  frame_pipeline.rs  frame_pipeline_builder.rs  mod.rs
crates/ez-ffmpeg/src/core/metadata/: default_behavior.rs  metadata_type.rs  mod.rs  operations.rs  stream_specifier.rs
crates/ez-ffmpeg/src/core/scheduler/: dec_task.rs  demux_task.rs  enc_task.rs  ffmpeg_scheduler.rs  filter_task.rs  frame_filter_pipeline.rs  input_controller.rs  mod.rs  mux_task.rs
crates/ez-ffmpeg/src/flv/: flv_buffer.rs  flv_header.rs  flv_tag.rs  flv_tag_header.rs  mod.rs
crates/ez-ffmpeg/src/opengl/: mod.rs  opengl_frame_filter.rs
crates/ez-ffmpeg/src/rtmp/: embed_rtmp_server.rs  gop.rs  mod.rs  rtmp_connection.rs  rtmp_scheduler.rs
crates/ez-ffmpeg/src/util/: ffmpeg_utils.rs  mod.rs  sch_waiter.rs  thread_synchronizer.rs
crates/test-server/: Cargo.toml
crates/test-server/src/: lib.rs
crates/twox-hash/: Cargo.toml
crates/twox-hash/src/: lib.rs
crates/xorf/: Cargo.toml
crates/xorf/benches/: bfuse16.rs
crates/xorf/src/: lib.rs
docs/: api-zh.md  claim-zh.md  development.md  ffmpeg-dependencies.md
scripts/: verify-deps.sh
src/: app_state.rs  bucket.rs  claim.rs  claim_bucket.rs  claim_middleware.rs  config.rs  job.rs  lib.rs  main.rs  middleware.rs  opendal.rs  params.rs  routes.rs  stream_map.rs  token_bucket.rs  utils.rs
src/api/: routes.rs
src/claim/: bucket.rs  middleware.rs  mod.rs  validation.rs
src/job/: convert.rs  manager.rs  mod.rs  upload.rs
tests/: auth_integration_test.rs
