[package]
name = "video-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
ffmpeg-next = { version = "7.1", features = [
    "software-resampling",
    "software-scaling",
] }
futures = "0.3"
mime_guess = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
axum = { version = "0.8.4" }
async-channel = "2.3.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
hyper = "1.6.0"
num_cpus = "1.16.0"
clap = { version = "4.5.38", features = ["derive"] }
