[package]
name = "video-storage"
version = "0.3.0"
edition = "2024"

[features]
debug = []

[dependencies]
bytes = "1"
ffmpeg-next = { version = "7.1.0", features = [
    "build",
    "build-lib-ass",
    "build-lib-vpx",
    "build-lib-opus",
    "build-lib-x264",
    "build-lib-x265",
    "build-license-gpl",
] }
ez-ffmpeg = { version = "0.5.4" }
futures = "0.3"
mime_guess = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
async-channel = "2.3.1"
async-stream = "0.3"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
hyper = "1.6.0"
clap = { version = "4.5.38", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5.0"
opendal = { version = "0.54", features = ["services-s3", "services-fs", "layers-mime-guess"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
thiserror = "1.0"
parking_lot = "0.12.4"

[dev-dependencies]
tower = "0.5"
portpicker = "0.1"
uuid = { version = "1.10", features = ["v4"] }
