[package]
name = "video-storage-claim"
version.workspace = true
edition.workspace = true

[dependencies]
# Crypto and encoding
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
xorf = { path = "../xorf" }

# Async runtime and utilities
axum.workspace = true
tokio.workspace = true
parking_lot.workspace = true

# Logging and serialization
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test = "0.4"
