[package]
name = "xorf"
version = "0.1.0"
edition.workspace = true
description = "Simplified BinaryFuse16 filter implementation"

[dependencies]
libm = "0.2.1"
rand.workspace = true
serde.workspace = true
twox-hash = { path = "../twox-hash" }

[dev-dependencies]
criterion = "0.3.0"
serde_json.workspace = true

[[bench]]
name = "bfuse16"
harness = false
